small chat area class changes

--- a/My_Theme_Collection/NewAkameGaKill.theme.css
+++ b/My_Theme_Collection/NewAkameGaKill.theme.css
@@ -2,7 +2,7 @@
  * @name New Akame Ga Kill! Theme
  * @author ShadowDevilsAvenged
  * @description Newer Akame Ga Kill! theme for my return
- * @version 6.4
+ * @version 6.5
  */
 
 /* Main Background */
@@ -1069,18 +1069,18 @@
     border-radius: 5px;
 }
 
-.cozy_ec86aa .header_ec86aa,
-.username_ec86aa,
-.cozy_ec86aa .timestamp_ec86aa,
-.markup_d6076c {
+.cozy_f9f2ca .header_f9f2ca,
+.username_f9f2ca,
+.cozy_f9f2ca .timestamp_f9f2ca,
+.markup_f8f345 {
     color: white;
 }
 
-.markup_d6076c {
+.markup_f8f345 {
     font-weight: 300;
 }
 
-.markup_d6076c a,
+.markup_f8f345 a,
 .mutedChannelsHook_f1ed13 {
     color: #AEC4D4;
     font-weight: 500;
@@ -1543,11 +1543,11 @@
     border-radius: 3px;
 }
 
-.divider_fc5f50 {
+.divider_c2654d {
     border-top: none;
 }
 
-.content_fc5f50 {
+.content_c2654d {
     padding: 4px 7px;
     color: white !important;
     background: #C13;
@@ -1613,7 +1613,7 @@
     background: rgba(0, 0, 0, .5);
 }
 
-.theme-dark .wrapperAudio_f316dd,
+.theme-dark .wrapperAudio_f72aac,
 .attachment_a4623d {
     background: rgba(0, 0, 0, .5);
     border-color: rgba(255, 255, 255, .3);
@@ -1621,45 +1621,45 @@
 
 .filenameLinkWrapper_a4623d,
 .filenameLinkWrapper_a4623d a,
-.metadataContent_f316dd a {
+.metadataContent_f72aac a {
    color: #AEC4D4;
 }
 
-.nonMediaAttachment_ef83c1 {
+.nonMediaMosaicItem_e5c1dc {
     outline: none;
 }
 
-.hoverButtonGroup__304b2 {
+.hoverButtonGroup_e5c1dc {
     background-color: #912;
 }
 
-.hoverButton_be4802 {
+.hoverButton_e5c1dc {
     color: silver;
 }
 
 .removeAttachmentHoverButton__161a2:hover, 
 .keyboard-mode .removeAttachmentHoverButton__161a2:focus,
-.hoverButton_be4802:hover, 
-.keyboard-mode .hoverButton_be4802:focus {
+.hoverButton_e5c1dc:hover, 
+.keyboard-mode .hoverButton_e5c1dc:focus {
     background-color: #C13;
     color: white;
 }
 
-.mediaBarWrapper_f7877e,
-.mediaBarWrapper_f7877e:after,
-.mediaBarWrapper_f7877e:before {
+.mediaBarWrapper_d12f5a,
+.mediaBarWrapper_d12f5a:after,
+.mediaBarWrapper_d12f5a:before {
   background-color: transparent;
 }
 
 .mediaBarGrabber_f7877e,
-.mediaBarProgress_f7877e,
-.mediaBarProgress_f7877e:after,
-.mediaBarProgress_f7877e:before,
-.mediaBarInteraction_f7877e:hover .mediaBarGrabber_f7877e,
-.mediaBarInteractionDragging_f7877e .mediaBarGrabber_f7877e,
-.mediaBarPreview_f7877e,
-.mediaBarPreview_f7877e:after,
-.mediaBarPreview_f7877e:before {
+.mediaBarProgress_d12f5a,
+.mediaBarProgress_d12f5a:after,
+.mediaBarProgress_d12f5a:before,
+.mediaBarInteraction_d12f5a:hover .mediaBarGrabber_f7877e,
+.mediaBarInteractionDragging_d12f5a .mediaBarGrabber_f7877e,
+.mediaBarPreview_d12f5a,
+.mediaBarPreview_d12f5a:after,
+.mediaBarPreview_d12f5a:before {
   background-color: #912;
 }
 
@@ -1971,13 +1971,13 @@ span.button_f67531.enabled_f67531:hover path {
     color: white !important;
 }
 
-.unreadPill_fc5f50 {
+.unreadPill_c2654d {
     border-radius: 0 6px 6px 0;
     color: #fff;
     background-color: #912;
 }
 
-.unreadPillCapStroke_fc5f50 {
+.unreadPillCapStroke_c2654d {
     color: #912;
     fill: #912;
 }
@@ -2801,7 +2801,7 @@ span.button_f67531.enabled_f67531:hover path {
     border: 1px solid rgba(255, 255, 255, .3);
 }
 
-.markup_d6076c code {
+.markup_f8f345 code {
     background: rgba(255, 255, 255, .237);
     border: none;
 }
