--- a/My_Theme_Collection/NewBNHA.theme.css
+++ b/My_Theme_Collection/NewBNHA.theme.css
@@ -2,7 +2,7 @@
  * @name New BNHA Theme
  * @author ShadowDevilsAvenged
  * @description Newer BNHA theme for my return
- * @version 6
+ * @version 6.1
  */
 
 /* Main Background */
@@ -698,7 +698,7 @@
 }
 
 .theme-dark .markValue_c7a159,
-.markup_d6076c {
+.markup_f8f345 {
     color: white;
 }
 
@@ -711,7 +711,7 @@
     background-color: rgba(0, 0, 0, .4);
 }
 
-.markup_d6076c a,
+.markup_f8f345 a,
 .mutedChannelsHook_f1ed13 {
     color: #2AB;
     font-weight: bold;
@@ -733,7 +733,7 @@
     border: 2px solid #2AB;
 }
 
-.cozy_ec86aa .timestamp_ec86aa {
+.cozy_f9f2ca .timestamp_f9f2ca {
     color: silver;
 }
 
@@ -1355,25 +1355,25 @@
     color: white;
 }
 
-.divider_fc5f50 {
+.divider_c2654d {
     border-top: none;
 }
 
-.content_fc5f50 {
+.content_c2654d {
     padding: 2px 8px;
     color: white !important;
     background: #2AB;
     border-radius: 5px;
 }
 
-.unreadPill_fc5f50 {
+.unreadPill_c2654d {
     border-radius: 0 6px 6px 0;
     text-transform: capitalize;
     color: #fff;
     background-color: #2AB;
 }
 
-.unreadPillCapStroke_fc5f50 {
+.unreadPillCapStroke_c2654d {
     color: #2AB;
     fill: #2AB;
 }
@@ -2466,7 +2466,7 @@
     background-color: rgba(0, 0, 0, .2)
 }
 
-.markup_d6076c code {
+.markup_f8f345 code {
     background: rgba(34, 169, 187, .29);
     border: 3px ridge #2AB;
 }
