--- a/My_Theme_Collection/NewKemonoFriends.theme.css
+++ b/My_Theme_Collection/NewKemonoFriends.theme.css
@@ -2,7 +2,7 @@
  * @name New Kemono Friends Theme
  * @author ShadowDevilsAvenged
  * @description Newer Kemono Friends theme for my return
- * @version 6.2
+ * @version 6.3
  */
 
 /* Main Background */
@@ -838,12 +838,12 @@
     font-weight: bold;
 }
 
-.markup_d6076c a,
+.markup_f8f345 a,
 .mutedChannelsHook_f1ed13 {
     color: #f44;
 }
 
-.markup_d6076c {
+.markup_f8f345 {
     color: white;
 }
 
@@ -1408,12 +1408,12 @@
     color: white !important;
 }
 
-.cozy_ec86aa .header_ec86aa,
-.username_ec86aa {
+.cozy_f9f2ca .header_f9f2ca,
+.username_f9f2ca {
     color: white;
 }
 
-.cozy_ec86aa .timestamp_ec86aa {
+.cozy_f9f2ca .timestamp_f9f2ca {
     color: silver;
 }
 
@@ -1464,25 +1464,25 @@
     background-color: rgba(0, 0, 0, .3);
 }
 
-.divider_fc5f50 {
+.divider_c2654d {
     border-top: none;
 }
 
-.content_fc5f50 {
+.content_c2654d {
     padding: 2px 7px;
     color: white !important;
     background: #f44;
     border-radius: 4px;
 }
 
-.unreadPill_fc5f50 {
+.unreadPill_c2654d {
     border-radius: 0 6px 6px 0;
     text-transform: capitalize;
     color: #fff;
     background-color: #f44;
 }
 
-.unreadPillCapStroke_fc5f50 {
+.unreadPillCapStroke_c2654d {
     color: #f44;
     fill: #f44;
 }
@@ -2450,7 +2450,7 @@ button.button_f67531 {
     border-radius: 5px;
 }
 
-.markup_d6076c code {
+.markup_f8f345 code {
     scrollbar-color: #f44 white;
     background: rgba(0, 0, 0, 0.43);
     border: 3px ridge #f44;
@@ -2606,7 +2606,7 @@ button.button_f67531 {
     background-color: #f44;
 }
 
-.markup_d6076c a,
+.markup_f8f345 a,
 .mutedChannelsHook_f1ed13 {
     font-weight: bold;
 }
