--- a/My_Theme_Collection/NewRemTheme.theme.css
+++ b/My_Theme_Collection/NewRemTheme.theme.css
@@ -2,7 +2,7 @@
  * @name New Rem Theme
  * @author ShadowDevilsAvenged
  * @description Newer Rem theme for my return
- * @version 6
+ * @version 6.1
  */
 
  .app_a01fb1 {
@@ -586,17 +586,17 @@
     background-color: #61a5d8;
 }
 
-.cozy_ec86aa .header_ec86aa {
+.cozy_f9f2ca .header_f9f2ca {
     color: white;
 }
 
-.username_ec86aa {
+.username_f9f2ca {
     font-size: 15px;
     font-weight: 700;
     color: white;
 }
 
-.cozy_ec86aa .timestamp_ec86aa,
+.cozy_f9f2ca .timestamp_f9f2ca,
 .brand_a0.item_a0,
 .themed_a0.item_a0,
 .brand_a0.item_a0:hover,
@@ -707,12 +707,12 @@
     color: white !important;
 }
 
-.markup_d6076c a,
+.markup_f8f345 a,
 .mutedChannelsHook_f1ed13 {
     color: #94CEE6;
 }
 
-.markup_d6076c {
+.markup_f8f345 {
     color: white;
 }
 
@@ -803,25 +803,25 @@
     border-top-color: #61A5D8;
 }
 
-#app-mount .divider_fc5f50 {
+#app-mount .divider_c2654d {
     border-top: none;
 }
 
-#app-mount .content_fc5f50 {
+#app-mount .content_c2654d {
     padding: 5px 8px;
     color: white;
     background: #61A5D8;
     border-radius: 5px;
 }
 
-.unreadPill_fc5f50 {
+.unreadPill_c2654d {
     border-radius: 0 6px 6px 0;
     text-transform: capitalize;
     color: #fff;
     background-color: #61A5D8;
 }
 
-.unreadPillCapStroke_fc5f50 {
+.unreadPillCapStroke_c2654d {
     color: #61A5D8;
     fill: #61A5D8;
 }
@@ -1412,7 +1412,7 @@
 }
 
 
-.markup_d6076c code {
+.markup_f8f345 code {
     background: rgba(97, 164, 216, .44);
     border: 4px ridge #61A5D8;
 }
