--- a/My_Theme_Collection/NightTimeMountain.theme.css
+++ b/My_Theme_Collection/NightTimeMountain.theme.css
@@ -2,7 +2,7 @@
  * @name Night Time Mountain
  * @author ShadowDevilsAvenged
  * @description Nice view of the mountain in the night time
- * @version 3.6
+ * @version 3.7
 */
 
 .app_a01fb1 {
@@ -511,7 +511,7 @@
 }
 
 .textArea_d0696b,
-.markup_d6076c {
+.markup_f8f345 {
     font-size: 14px;
     color: white;
 }
@@ -520,7 +520,7 @@
     caret-color: white;
 }
 
-.markup_d6076c a,
+.markup_f8f345 a,
 .mutedChannelsHook_f1ed13 {
     color: #D0DFFF;
 }
@@ -710,7 +710,7 @@
     color: white;
 }
 
-.markup_d6076c code {
+.markup_f8f345 code {
     font-size: 14px;
     background: rgba(255, 255, 255, .07);
     border: 1px solid rgba(255, 255, 255, .07);
@@ -1477,22 +1477,22 @@
     box-shadow: none;
 }
 
-#app-mount .divider_fc5f50 {
+#app-mount .divider_c2654d {
     border: 2px solid rgba(149, 168, 176, .4);
 }
 
-#app-mount .content_fc5f50 {
+#app-mount .content_c2654d {
     color: #e2e2e2;
     background: #4B5569;
     border-radius: 4px;
 }
 
-.unreadPill_fc5f50 {
+.unreadPill_c2654d {
     border-radius: 0 44px 44px 0;
     background-color: #95A8B0;
 }
 
-.unreadPillCapStroke_fc5f50 {
+.unreadPillCapStroke_c2654d {
     color: #95A8B0;
     fill: #95A8B0;
 }
@@ -1534,11 +1534,11 @@
     border-radius: 0;
 }
 
-.cozy_ec86aa .header_ec86aa {
+.cozy_f9f2ca .header_f9f2ca {
     color: white;
 }
 
-.cozy_ec86aa .timestamp_ec86aa {
+.cozy_f9f2ca .timestamp_f9f2ca {
     color: #e2e2e2;
 }
 
@@ -2111,29 +2111,29 @@
     box-shadow: none;
 }
 
-.theme-dark .wrapperAudio_f316dd {
+.theme-dark .wrapperAudio_f72aac {
     border-color: black;
     background-color: rgba(0, 0, 0, .3);
 }
 
-.metadataContent_f316dd a {
+.metadataContent_f72aac a {
     color: #D0DFFF;
     font-size: large;
     font-weight: 700;
 }
 
-.mediaBarWrapper_f7877e,
-.mediaBarWrapper_f7877e:after,
-.mediaBarWrapper_f7877e:before {
+.mediaBarWrapper_d12f5a,
+.mediaBarWrapper_d12f5a:after,
+.mediaBarWrapper_d12f5a:before {
     background-color: transparent;
 }
 
 .mediaBarGrabber_f7877e,
-.mediaBarProgress_f7877e,
-.mediaBarProgress_f7877e:after,
-.mediaBarProgress_f7877e:before,
-.mediaBarInteraction_f7877e:hover .mediaBarGrabber_f7877e,
-.mediaBarInteractionDragging_f7877e .mediaBarGrabber_f7877e {
+.mediaBarProgress_d12f5a,
+.mediaBarProgress_d12f5a:after,
+.mediaBarProgress_d12f5a:before,
+.mediaBarInteraction_d12f5a:hover .mediaBarGrabber_f7877e,
+.mediaBarInteractionDragging_d12f5a .mediaBarGrabber_f7877e {
     background-color: #95A8B0;
 }
 
