--- a/My_Theme_Collection/Old-AkameGaKill-Theme.theme.css
+++ b/My_Theme_Collection/Old-AkameGaKill-Theme.theme.css
@@ -2,7 +2,7 @@
  * @name Old-Akame_Ga_Kill-Theme
  * @author ShadowDevilsAvenged
  * @description Akame from Akame No Kill
- * @version 6
+ * @version 6.1
  */
 
  #app-mount .app_a01fb1 {
@@ -1008,8 +1008,8 @@
 #app-mount .lastPlayed_fd966d,
 #app-mount .overlayStatusText__668e1,
 #app-mount .gameName_fd966d,
-.markup_d6076c,
-.cozy_ec86aa .header_ec86aa,
+.markup_f8f345,
+.cozy_f9f2ca .header_f9f2ca,
 .theme-dark .markValue_c7a159,
 .theme-dark .content_ed23b8 ol,
 .theme-dark .content_ed23b8 p,
@@ -1042,13 +1042,13 @@
   background-color: rgba(0, 0, 0, 0.4);
 }
 
-.cozy_ec86aa .messageContent_ec86aa {
+.cozy_f9f2ca .messageContent_ec86aa {
   margin-left: -1px;
   padding-left: 2px;
 }
 
 .zalgo_ec86aa .messageContent_ec86aa,
-.zalgo_ec86aa.cozy_ec86aa .header_ec86aa {
+.zalgo_ec86aa.cozy_f9f2ca .header_f9f2ca {
   overflow: visible;
 }
 
@@ -1252,7 +1252,7 @@
   color: white;
 }
 
-.cozy_ec86aa.mentioned_d5deea {
+.cozy_f9f2ca.mentioned_d5deea {
   position: relative;
   background-color: rgba(155, 39, 66, .3);
   padding-bottom: 12px;
@@ -1292,8 +1292,8 @@
   background: rgba(155, 39, 66, .4);
 }
 
-.cozy_ec86aa .timestamp_ec86aa,
-.cozy_ec86aa .timestamp_ec86aa.alt_ec86aa,
+.cozy_f9f2ca .timestamp_f9f2ca,
+.cozy_f9f2ca .timestamp_f9f2ca.alt_ec86aa,
 button.button_f67531,
 .button_ef319f {
   color: white;
@@ -1308,15 +1308,15 @@ button.button_f67531,
   border: none;
 }
 
-.divider_fc5f50 {
+.divider_c2654d {
   border: none;
 }
 
-.unreadPill_fc5f50 {
+.unreadPill_c2654d {
   background-color: #9b2742;
 }
 
-.unreadPillCapStroke_fc5f50 {
+.unreadPillCapStroke_c2654d {
   color: #9b2742;
   fill: #9b2742;
 }
@@ -1395,13 +1395,13 @@ button.button_f67531.enabled_f67531:hover {
   background-color: transparent;
 }
 
-.isUnread_fc5f50 .content_fc5f50 {
+.isUnread_fc5f50 .content_c2654d {
   color: white;
   background-color: #9b2742;
   padding: 5px 8px;
 }
 
-.content_fc5f50 {
+.content_c2654d {
   padding: 5px 8px;
   color: white;
   background: rgba(255, 255, 255, .13);
@@ -1559,10 +1559,10 @@ button.button_f67531.enabled_f67531:hover {
 }
 
 .mediaBarGrabber_f7877e,
-.mediaBarProgress_f7877e,
-.mediaBarProgress_f7877e:after,
-.mediaBarProgress_f7877e:before,
-.mediaBarInteraction_f7877e:hover .mediaBarGrabber_f7877e {
+.mediaBarProgress_d12f5a,
+.mediaBarProgress_d12f5a:after,
+.mediaBarProgress_d12f5a:before,
+.mediaBarInteraction_d12f5a:hover .mediaBarGrabber_f7877e {
   background-color: #9b2742;
 }
 
@@ -1585,11 +1585,11 @@ button.button_f67531.enabled_f67531:hover {
   padding: 2px 6px;
 }
 
-.markup_d6076c code.inline {
+.markup_f8f345 code.inline {
   padding: .3em;
 }
 
-.markup_d6076c code {
+.markup_f8f345 code {
   line-height: 1.525rem;
   background: rgba(155, 39, 66, .36);
   border: none;
@@ -2915,7 +2915,7 @@ button.button_f67531.enabled_f67531:hover {
 .footer_c33701 a,
 .lookLink_dd4f85.colorLink_dd4f85,
 .bda-slist .bda-footer a,
-.markup_d6076c a,
+.markup_f8f345 a,
 .welcomeMessage-ULm0mo a,
 .theme-dark .filenameLinkWrapper_a4623d,
 .theme-dark .filenameLinkWrapper_a4623d a,
