--- a/My_Theme_Collection/TeamRam.theme.css
+++ b/My_Theme_Collection/TeamRam.theme.css
@@ -2,7 +2,7 @@
  * @name Team Ram
  * @author ShadowDevilsAvenged
  * @description Team Ram is back once again(big request to bring this back)
- * @version 3.8
+ * @version 3.9
 */
 
 /* Ram Main Picture */
@@ -509,11 +509,11 @@
 }
 
 .defaultColor_a595eb,
-.markup_d6076c {
+.markup_f8f345 {
     color: white;
 }
 
-.markup_d6076c {
+.markup_f8f345 {
     text-shadow: 0 1px 2px black;
 }
 
@@ -1410,7 +1410,7 @@
     color: white;
 }
 
-.cozy_ec86aa .timestamp_ec86aa {
+.cozy_f9f2ca .timestamp_f9f2ca {
     color: white;
 }
 
@@ -1442,7 +1442,7 @@
     background: rgba(0, 0, 0, .2);
 }
 
-.markup_d6076c a,
+.markup_f8f345 a,
 .mutedChannelsHook_f1ed13 {
     color: #f3acc5;
     text-shadow: 0 2px 0 black, 0 2px 0 black, 
@@ -1471,11 +1471,11 @@
     color: white;
 }
 
-.divider_fc5f50 {
+.divider_c2654d {
     border-top: none;
 }
 
-#app-mount .content_fc5f50 {
+#app-mount .content_c2654d {
     padding: 2px 4px;
     color: white;
     background: #f3acc5;
@@ -1483,11 +1483,11 @@
     border-radius: 4px;
 }
 
-.unreadPill_fc5f50 {
+.unreadPill_c2654d {
     background-color: #f3acc5;
 }
 
-.unreadPillCapStroke_fc5f50 {
+.unreadPillCapStroke_c2654d {
     color: #f3acc5;
     fill: #f3acc5;
 }
@@ -2103,8 +2103,8 @@ button.button_f67531.enabled_f67531:hover {
     background-color: #f3acc5;
 }
 
-.cozy_ec86aa .header_ec86aa,
-.username_ec86aa {
+.cozy_f9f2ca .header_f9f2ca,
+.username_f9f2ca {
     color: white;
 }
 
@@ -2232,11 +2232,11 @@ button.button_f67531.enabled_f67531:hover {
 }
 
 .mediaBarGrabber_f7877e, 
-.mediaBarProgress_f7877e, 
-.mediaBarProgress_f7877e:after, 
-.mediaBarProgress_f7877e:before,
-.mediaBarInteraction_f7877e:hover .mediaBarGrabber_f7877e,
-.mediaBarInteractionDragging_f7877e .mediaBarGrabber_f7877e {
+.mediaBarProgress_d12f5a, 
+.mediaBarProgress_d12f5a:after, 
+.mediaBarProgress_d12f5a:before,
+.mediaBarInteraction_d12f5a:hover .mediaBarGrabber_f7877e,
+.mediaBarInteractionDragging_d12f5a .mediaBarGrabber_f7877e {
     background-color: #f3acc5;
 }
 
@@ -2919,13 +2919,13 @@ button.button_f67531.enabled_f67531:hover {
     background: none;
 }
 
-.markup_d6076c code,
-.theme-dark .wrapperAudio_f316dd {
+.markup_f8f345 code,
+.theme-dark .wrapperAudio_f72aac {
     background: rgba(0, 0, 0, .4);
     border: none;
 }
 
-.metadataContent_f316dd a {
+.metadataContent_f72aac a {
    color: #f3acc5;
    font-weight:  600;
 }
