Even smaller class changes
Discord stop touching stuff for a few months thanks

--- a/My_Theme_Collection/NewAkameGaKill.theme.css
+++ b/My_Theme_Collection/NewAkameGaKill.theme.css
@@ -2,7 +2,7 @@
  * @name New Akame Ga Kill! Theme
  * @author ShadowDevilsAvenged
  * @description Newer Akame Ga Kill! theme for my return
- * @version 6.5
+ * @version 6.6
  */
 
 /* Main Background */
@@ -250,7 +250,7 @@
 }
 
 /* Transparency */
-.container_e44302.themed_e44302,
+.container_fc4f04.themed_fc4f04,
 .chat_a7d72e,
 .container_cbd271,
 .sidebar_a4d4d9,
@@ -1469,7 +1469,7 @@
     fill: #912;
 }
 
-.divider_e44302 {
+.divider_fc4f04 {
     background: none;
 }
 
@@ -1759,7 +1759,7 @@
     border-radius: 5px;
 }
 
-.theme-dark .children_e44302:after {
+.theme-dark .children_fc4f04:after {
     background: none;
 }
 
@@ -2193,7 +2193,7 @@ span.button_f67531.enabled_f67531:hover path {
     color: white;
 }
 
-.icon_e44302,
+.icon_fc4f04,
 .icon_effbe2 {
     color: white !important;
 }
@@ -2535,7 +2535,7 @@ span.button_f67531.enabled_f67531:hover path {
     border-radius: 2px;
 }
 
-.iconBadge_e44302 {
+.iconBadge_fc4f04 {
     background-color: #912;
     border: 2px outset #C13;
     width: 11px;
