--- a/My_Theme_Collection/NewBNHA.theme.css
+++ b/My_Theme_Collection/NewBNHA.theme.css
@@ -2,7 +2,7 @@
  * @name New BNHA Theme
  * @author ShadowDevilsAvenged
  * @description Newer BNHA theme for my return
- * @version 6.1
+ * @version 6.2
  */
 
 /* Main Background */
@@ -260,7 +260,7 @@
 }
 
 /* Transparency */
-.container_e44302.themed_e44302,
+.container_fc4f04.themed_fc4f04,
 .chat_a7d72e,
 .container_cbd271,
 .sidebar_a4d4d9,
@@ -1317,11 +1317,11 @@
     box-shadow: none;
 }
 
-.icon_e44302 {
+.icon_fc4f04 {
     color: white !important;
 }
 
-.theme-dark .children_e44302:after {
+.theme-dark .children_fc4f04:after {
     background: none;
 }
 
@@ -2406,7 +2406,7 @@
     border-radius: 3px;
 }
 
-.iconBadge_e44302 {
+.iconBadge_fc4f04 {
     width: 12px;
     height: 12px;
     border-radius: 8px;
