--- a/My_Theme_Collection/NewKemonoFriends.theme.css
+++ b/My_Theme_Collection/NewKemonoFriends.theme.css
@@ -2,7 +2,7 @@
  * @name New Kemono Friends Theme
  * @author ShadowDevilsAvenged
  * @description Newer Kemono Friends theme for my return
- * @version 6.3
+ * @version 6.4
  */
 
 /* Main Background */
@@ -240,7 +240,7 @@
 }
 
 /* Transparency */
-.container_e44302.themed_e44302,
+.container_fc4f04.themed_fc4f04,
 .chat_a7d72e,
 .container_cbd271,
 .sidebar_a4d4d9,
@@ -1178,7 +1178,7 @@
     font-weight: 200;
 }
 
-.icon_e44302 {
+.icon_fc4f04 {
     color: white;
 }
 
@@ -1287,11 +1287,11 @@
     color: white !important;
 }
 
-.theme-dark .children_e44302:after {
+.theme-dark .children_fc4f04:after {
     background: none;
 }
 
-.clickable_e44302 .icon_e44302 {
+.clickable_e44302 .icon_fc4f04 {
     color: white;
 }
 
@@ -1816,7 +1816,7 @@
     box-shadow: none;
 }
 
-.iconBadge_e44302 {
+.iconBadge_fc4f04 {
     width: 10px;
     height: 10px;
     border-radius: 2px;
