--- a/My_Theme_Collection/NightTimeMountain.theme.css
+++ b/My_Theme_Collection/NightTimeMountain.theme.css
@@ -2,7 +2,7 @@
  * @name Night Time Mountain
  * @author ShadowDevilsAvenged
  * @description Nice view of the mountain in the night time
- * @version 3.7
+ * @version 3.8
 */
 
 .app_a01fb1 {
@@ -1680,11 +1680,11 @@
     border-top: 1px solid #95A8B0;
 }
 
-#app-mount .icon_e44302 {
+#app-mount .icon_fc4f04 {
     color: #D0DFFF;
 }
 
-#app-mount .container_e44302 {
+#app-mount .container_fc4f04 {
     background-color: transparent !important;
 }
 
@@ -1702,7 +1702,7 @@
     background-color: transparent;
 }
 
-.theme-dark .children_e44302:after {
+.theme-dark .children_fc4f04:after {
     background: none;
 }
 
@@ -1725,7 +1725,7 @@
     opacity: .4 !important;
 }
 
-.iconBadge_e44302 {
+.iconBadge_fc4f04 {
     background-color: #95A8B0;
 }
 
@@ -2237,7 +2237,7 @@
     transform: translateX(26px);
 }
 
-.divider_e44302 {
+.divider_fc4f04 {
     background: none;
 }
 
