--- a/My_Theme_Collection/Old-AkameGaKill-Theme.theme.css
+++ b/My_Theme_Collection/Old-AkameGaKill-Theme.theme.css
@@ -2,7 +2,7 @@
  * @name Old-Akame_Ga_Kill-Theme
  * @author ShadowDevilsAvenged
  * @description Akame from Akame No Kill
- * @version 6.1
+ * @version 6.2
  */
 
  #app-mount .app_a01fb1 {
@@ -404,7 +404,7 @@
   background-color: transparent;
 }
 
-.theme-dark .children_e44302:after {
+.theme-dark .children_fc4f04:after {
   background: none;
 }
 
@@ -1329,7 +1329,7 @@ button.button_f67531,
   background-color: transparent;
 }
 
-.theme-dark .container_e44302 {
+.theme-dark .container_fc4f04 {
   color: white;
   background-color: transparent !important;
 }
@@ -1421,7 +1421,7 @@ button.button_f67531.enabled_f67531:hover {
 }
 
 .mention_c10249:active,
-.iconBadge_e44302 {
+.iconBadge_fc4f04 {
   background-color: #9b2742;
 }
 
@@ -1665,20 +1665,20 @@ button.button_f67531.enabled_f67531:hover {
   color: white;
 }
 
-.icon_e44302 {
+.icon_fc4f04 {
   color: #9b2742;
 }
 
-.clickable_e44302 .icon_e44302 {
+.clickable_e44302 .icon_fc4f04 {
   color: white;
 }
 
-.children_e44302:after,
+.children_fc4f04:after,
 .theme-dark .form_a7d72e:before,
 .option_b0286e:hover:after,
 .option_b0286e[aria-selected=true]:after,
 .theme-dark .option_b0286e:after,
-.divider_e44302,
+.divider_fc4f04,
 .theme-dark .form_a7d72e:after {
   background: none;
 }
