--- a/My_Theme_Collection/Old-BNHA-Theme.theme.css
+++ b/My_Theme_Collection/Old-BNHA-Theme.theme.css
@@ -2,7 +2,7 @@
  * @name Old BNHA Theme Returns
  * @author ShadowDevilsAvenged
  * @description Say Hello to the BNHA theme once again
- * @version 6.1
+ * @version 6.2
 */
 
 .avatarDecoration_ec86aa {
@@ -263,7 +263,7 @@ textarea,
     color: #fff;
 }
 
-.theme-dark .children_e44302:after {
+.theme-dark .children_fc4f04:after {
     background: none;
 }
 
@@ -299,7 +299,7 @@ textarea,
     background: rgba(0, 0, 0, 0.42);
 }
 
-.theme-dark .container_e44302 {
+.theme-dark .container_fc4f04 {
     background: transparent !important;
     box-shadow: none;
     color: white;
@@ -737,11 +737,11 @@ textarea,
     background-color: #008c99;
 }
 
-.icon_e44302 {
+.icon_fc4f04 {
     color: #008c99;
 }
 
-.divider_e44302 {
+.divider_fc4f04 {
     background: transparent;
 }
 
@@ -768,7 +768,7 @@ textarea,
     color: white;
 }
 
-.iconBadge_e44302 {
+.iconBadge_fc4f04 {
     width: 10px;
     height: 10px;
     border-radius: 2px;
@@ -2082,7 +2082,7 @@ textarea,
 
 .privateChannels_f0963d,
 .theme-dark .scroller_c47fa9,
-.children_e44302:after,
+.children_fc4f04:after,
 .scroller_f4e139,
 .scroller_c100ff {
     background: none;
