--- a/My_Theme_Collection/TeamRem.theme.css
+++ b/My_Theme_Collection/TeamRem.theme.css
@@ -2,7 +2,7 @@
  * @name Team Rem
  * @author ShadowDevilsAvenged
  * @description Team Rem is back once again(big request to bring this back)
- * @version 3.9
+ * @version 4
 */
 
 /* Rem Main Picture */
@@ -1266,7 +1266,7 @@
 
 .privateChannels_f0963d,
 .theme-dark .scroller_c47fa9,
-#app-mount .container_e44302,
+#app-mount .container_fc4f04,
 .theme-dark .container_b2ca13,
 .container_c2739c {
     background-color: transparent !important;
@@ -1280,7 +1280,7 @@
     box-shadow: none;
 }
 
-#app-mount .icon_e44302 {
+#app-mount .icon_fc4f04 {
     color: white;
 }
 
@@ -1639,8 +1639,8 @@ button.button_f67531.enabled_f67531:hover {
     border-bottom: none;
 }
 
-.divider_e44302,
-.theme-dark .children_e44302:after {
+.divider_fc4f04,
+.theme-dark .children_fc4f04:after {
     background: none;
 }
 
@@ -2339,7 +2339,7 @@ button.button_f67531.enabled_f67531:hover {
     color: white;
 }
 
-.iconBadge_e44302 {
+.iconBadge_fc4f04 {
     background-color: #6cb4fe;
 }
 
