--- a/My_Theme_Collection/Youtube_Nation.theme.css
+++ b/My_Theme_Collection/Youtube_Nation.theme.css
@@ -2,7 +2,7 @@
  * @name Youtube Nation
  * @author ShadowDevilsAvenged
  * @description The Storage of All Videos
- * @version 3.4
+ * @version 3.5
 */
 
 .app_a01fb1, 
@@ -12,7 +12,7 @@
 }
 
 .container_cbd271,
-#app-mount .container_e44302,
+#app-mount .container_fc4f04,
 .sidebar_a4d4d9,
 .chat_a7d72e {
     background: none !important;
@@ -230,11 +230,11 @@
     box-shadow: none;
 }
 
-#app-mount .icon_e44302 {
+#app-mount .icon_fc4f04 {
     color: #F1F1F1;
 }
 
-.iconBadge_e44302 {
+.iconBadge_fc4f04 {
     background-color: #FF0000;
 }
 
@@ -968,8 +968,8 @@
     color: #3ea6ff;
 }
 
-.theme-dark .children_e44302:after,
-.divider_e44302 {
+.theme-dark .children_fc4f04:after,
+.divider_fc4f04 {
     background: none;
 }
 
