--- a/My_Theme_Collection/NewRemTheme.theme.css
+++ b/My_Theme_Collection/NewRemTheme.theme.css
@@ -2,7 +2,7 @@
  * @name New Rem Theme
  * @author ShadowDevilsAvenged
  * @description Newer Rem theme for my return
- * @version 6.1
+ * @version 6.2
  */
 
  .app_a01fb1 {
@@ -251,7 +251,7 @@
     background-color: rgba(0, 0, 0, .65);
 }
 
-.container_e44302.themed_e44302,
+.container_fc4f04.themed_fc4f04,
 .chat_a7d72e,
 .members_cbd271,
 .members_cbd271>div,
@@ -530,7 +530,7 @@
     color: white;
 }
 
-.iconBadge_e44302 {
+.iconBadge_fc4f04 {
     width: 10px;
     height: 10px;
     border-radius: 4px;
@@ -538,11 +538,11 @@
 }
 
 
-.icon_e44302 {
+.icon_fc4f04 {
     color: white !important;
 }
 
-.icon_e44302 foreignObject {
+.icon_fc4f04 foreignObject {
     mask: none;
 }
 
@@ -1206,7 +1206,7 @@
     box-shadow: none;
 }
 
-.theme-dark .children_e44302:after {
+.theme-dark .children_fc4f04:after {
     background: none;
 }
 
