--- a/My_Theme_Collection/TeamRam.theme.css
+++ b/My_Theme_Collection/TeamRam.theme.css
@@ -2,7 +2,7 @@
  * @name Team Ram
  * @author ShadowDevilsAvenged
  * @description Team Ram is back once again(big request to bring this back)
- * @version 3.9
+ * @version 4
 */
 
 /* Ram Main Picture */
@@ -1297,7 +1297,7 @@
 
 .privateChannels_f0963d,
 .theme-dark .scroller_c47fa9,
-#app-mount .container_e44302,
+#app-mount .container_fc4f04,
 .theme-dark .container_b2ca13,
 .container_c2739c {
     background-color: transparent !important;
@@ -1311,7 +1311,7 @@
     box-shadow: none;
 }
 
-#app-mount .icon_e44302 {
+#app-mount .icon_fc4f04 {
     color: white;
 }
 
@@ -1670,8 +1670,8 @@ button.button_f67531.enabled_f67531:hover {
     border-bottom: none;
 }
 
-.divider_e44302,
-.theme-dark .children_e44302:after {
+.divider_fc4f04,
+.theme-dark .children_fc4f04:after {
     background: none;
 }
 
@@ -2370,7 +2370,7 @@ button.button_f67531.enabled_f67531:hover {
     color: white;
 }
 
-.iconBadge_e44302 {
+.iconBadge_fc4f04 {
     background-color: #f3acc5;
 }
 
